[package]
name = "inductiondb"
version = "0.0.1"
description = "Realtime collaborative p2p database library"
license = "MIT"
authors = ["0chroma <me@chroma.sh>"]
edition = "2021"
homepage = "https://github.com/0chroma/InductionDB"
repository = "https://github.com/0chroma/InductionDB"
readme = "./README.md"

[dependencies]
libp2p = "0.53.0"
serde = { version = "1.0.195", features = ["derive"] }
yrs = "0.17.0"

[dependencies.uuid]
version = "1.6.1"
features = [
    "v4",
    "v7",
    "js",
    "serde",
]
